# cfcli

./: Cargo.toml  Cross.toml  MIGRATION.md  README.md  build.rs  cfcli-repo.gpg.key  index.html
.cargo/: config.toml
.github/scripts/: update-apt-repo.sh
.github/workflows/: cfcli.yml  release.yml
completions/: .gitignore  addendum.bash  addendum.ps1  addendum.zsh
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: bootload.md  console.md  crazyradio.md  debug.md  high-level-commander.md  lighthouse.md  loco.md  logging.md  memory.md  parameters.md  platform.md  select.md  settings.md  shell-completion.md  test.md
examples/: deck-ctrl.yaml
examples/deckctrl/: deck-ctrl.yaml
examples/trajectories/: cube.yaml  square.yaml
scripts/: refresh-completions.bash  refresh-completions.zsh
src/: cli.rs  error.rs  main.rs
src/modules/: bootloader.rs  console.rs  crazyradio.rs  debug.rs  lighthouse.rs  log.rs  lps.rs  memory.rs  param.rs  settings.rs  test.rs  trajectory.rs
src/utils/: deckctrl.rs  display.rs  firmware.rs
