[package]
name = "cfcli"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Eliasson <marcus@bitcraze.io>"]
description = "Crazyflie command-line client"
readme = "README.md"
repository = "https://github.com/evoggy/cfcli"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie", "cli"]
categories = ["hardware-support"]

[[bin]]
name = "cfcli"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3.1"
flume = "0.11.1"
num_enum = "0.7.4"
half = "2.6.0"
env_logger = "0.11.8"
crazyflie-link = { version="0.3.0", default-features = false }
crazyflie-lib = { git = "https://github.com/bitcraze/crazyflie-lib-rs", default-features = false }
clap = { version = "4.5.46", features = ["derive"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
confy = "1.0.0"
clap_generate = "3.0.3"
tokio = "1.47.1"
serde_yaml = "0.9.34"
probe-rs = "0.29.1"
clap-num = "1.2.0"
inquire = "0.9.1"
indicatif = { version = "0.18.1", features = ["tokio"] }
colored = "3.0.0"
rand = "0.9.2"
