[package]
name = "cfcli"
version = "0.8.0"
edition = "2021"
authors = ["Marcus Eliasson <marcus@bitcraze.io>"]
description = "Crazyflie command-line client"
readme = "README.md"
repository = "https://github.com/evoggy/cfcli"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie", "cli"]
categories = ["hardware-support"]

[package.metadata.deb]
maintainer = "Marcus Eliasson <marcus@bitcraze.io>"
copyright = "2026, Marcus Eliasson"
extended-description = """\
A command-line interface tool for managing and interacting with Crazyflie drones.
Provides logging, parameter control, memory operations, and bootloader functionality."""
depends = "$auto, curl, gnupg"
section = "utils"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/cfcli", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cfcli/", "644"],
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"  # tar.gz for Unix
pkg-fmt-windows = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "cfcli"
path = "src/main.rs"

[features]
default = []
packet_capture = ["crazyflie-link/packet_capture"]

[dependencies]
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3.1"
flume = "0.12.0"
num_enum = "0.7.4"
half = "2.6.0"
env_logger = "0.11.8"
anyhow = "1.0"
crazyflie-link = { version = "0.4.2", default-features = false }
crazyflie-lib = { version = "0.7.1", default-features = false }
crazyradio = { version = "0.6.0", features = ["async"] }
rusb = "0.9"
cfloader = "0.1.0"
clap = { version = "4.5.46", features = ["derive"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
confy = "2.0.0"
clap_generate = "3.0.3"
tokio = "1.47.1"
serde_yaml = "0.9.34"
probe-rs = "0.31.0"
clap-num = "1.2.0"
inquire = "0.9.1"
indicatif = { version = "0.18.1", features = ["tokio"] }
colored = "3.0.0"
rand = "0.10.1"
pretty-hex = "0.4.1"
terminal_size = "0.4.3"
octocrab = "0.51"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
reqwest = { version="0.13.3", default-features = false, features = ["rustls", "json"]}
zip = "8.6"
byteorder = "1.5.0"
hex = "0.4.3"
chrono = "0.4.44"
